2016-03-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c
	* src/SDCCval.c
	  Remove warning #212 W_LONGLONG_LITERAL.

2016-03-04 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Fix long long issues.
	* support/regression/tests/longlong.c
	  Add more tests.

2016-02-27 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/scripts/sdcc.nsi
	  Install large-stack-auto related files into windows distribution.

2016-02-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	* src/SDCCicode.h
	* src/SDCCval.c
	* src/SDCCval.h
	  Fix potential precision loss of long long operands.

2016-02-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c
	* src/SDCCast.h
	  Make sure the parameter list is not reversed before calling parmProcess().
	* support/regression/tests/bug-2473.c
	  Add a new test case.

2016-02-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c
	  Fix bug #2471.

2016-02-19 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c
	  Make the error message of error E_CONST_EXPECTED more understandable.

2016-02-18 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCglue.c
	  Add check of non-constant in a global variable's initial value.

2016-02-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic14/gen.c,
	* src/pic14/glue.c,
	* src/pic14/pcode.c,
	* src/pic14/pcode.h:
	Fixed bug: "#2470 wrong asm code for PIC14 interrupt - interrupt not working"

2016-02-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/Makefile.in: added and enabled large-mcs51-stack-auto
	* support/regression/ports/mcs51-large-stack-auto,
	* support/regression/ports/mcs51-large-stack-auto/spec.mk,
	* support/regression/Makefile.in: added test-mcs51-large-stack-auto
	* support/regression/tests/bug2094505.c: disabled for mcs51-large-stack-auto

2016-02-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/simi.c,
	* debugger/mcs51/simi.h: applied patch 268, Thanks Peter Dons Tychsen