@@ -1,3 +1,8 @@
+2016-03-06 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCgen.c
+	  Fix a bug: colon should not be treated as a label suffix in a literal string in inline-asm.
+
 2016-03-05 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCCerr.c
